--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dexie": "^4.2.0",
     "i18next": "^25.3.6",
+    "idb": "^8.0.3",
     "lucide-react": "^0.539.0",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
